--- a/style.css
+++ b/style.css
@@ -110,10 +110,10 @@ input[type="checkbox"] {
 /* Login page */
 
 .login {
-    background-image: url('images/chessboard-3d.jpg');
+    background-imageOff: url('images/chessboard-3d.jpg');
     background-position: center bottom;
     background-repeat: no-repeat;
-    background-color: black;
+    background-color: white;
 }
 
 .tableBorder {
@@ -126,12 +126,12 @@ input[type="checkbox"] {
     border: none;
 }
 
-.tableLogin {
-    border-top: 1px solid white;
-    border-left: 1px solid white;
-    border-right: 1px solid darkslategray;
-    border-bottom: 1px solid darkslategray;
-    border-radius: 6px;
+.tableOption {
+    border-top: 1px solid dimgray;
+    border-left: 1px solid dimgray;
+    border-right: 1px solid black;
+    border-bottom: 1px solid black;
+    border-radius: 12px;
 }
 
 .button {
