--- a/style.css
+++ b/style.css
@@ -45,7 +45,6 @@ input[type="checkbox"] {
 /* Web UI page */
 
 .login {
-    background-imageOff: url('images/chessboard-3d.jpg');
     background-position: center bottom;
     background-repeat: no-repeat;
     background-color: white;
@@ -56,6 +55,7 @@ input[type="checkbox"] {
     background-color:black; color:white; text-align:right; padding: 8px;
     background-image: url('images/icon-32-white.png');
     background-repeat: no-repeat;
+    min-width: 370px;
 }
 
 .login-header a {
